# kidlock

./: .gitignore  LICENSE  PLAN.md  README.md  config.example.yaml  install-linux.sh  install-windows.ps1  pam-check.py  pyproject.toml  uninstall-linux.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
agent/: __init__.py  activity.py  app_tracker.py  commands.py  config.py  dns_blocker.py  enforcer.py  main.py  mqtt_client.py  notifier.py  pam_check.py  scheduler.py  tamper_detector.py
agent/platform/: __init__.py  base.py  linux.py  windows.py
homeassistant/: automations.yaml  dashboard.yaml  kidlock.yaml
manager/: kidlock_manager.py  requirements.txt
packaging/: build-deb.sh  kidlock.service
packaging/debian/: conffiles  control  postinst  postrm  preinst  prerm
tests/: __init__.py  conftest.py  test_config.py  test_enforcer.py
tray/: kidlock-tray.desktop  kidlock-tray.py  requirements.txt
